--- a/DailyUpdate/Base.lproj/Main.storyboard
+++ b/DailyUpdate/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NtH-3E-cZh">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,7 @@
         <!--CalendarVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="B3FCalendarVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="B3FCalendarVC" id="BYZ-38-t0r" customClass="B3FCalendarVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -79,12 +79,20 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="calendarCV" destination="1mO-aZ-tuf" id="3mB-Ks-xCO"/>
+                        <outlet property="calendarCV" destination="1mO-aZ-tuf" id="Y1B-qc-t58"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="355"/>
+        </scene>
+        <!--Calendar PagingVC-->
+        <scene sceneID="i3m-qW-8bO">
+            <objects>
+                <pageViewController storyboardIdentifier="B3FCalendarPagingVC" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="vertical" spineLocation="none" id="NtH-3E-cZh" customClass="B3FCalendarPagingVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HCK-1B-oS1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="1028"/>
         </scene>
     </scenes>
 </document>
