--- a/DailyUpdate/Base.lproj/Main.storyboard
+++ b/DailyUpdate/Base.lproj/Main.storyboard
@@ -94,5 +94,63 @@
             </objects>
             <point key="canvasLocation" x="305" y="1028"/>
         </scene>
+        <!--Daily Update ListVC-->
+        <scene sceneID="dsj-50-dYI">
+            <objects>
+                <viewController storyboardIdentifier="B3FDailyUpdateListVC" id="DCy-69-kgB" customClass="B3FDailyUpdateListVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AYA-kS-H8J"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jgq-Ad-klP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CuB-d3-kfb">
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pr6-2R-0Xi">
+                                <rect key="frame" x="0.0" y="20" width="400" height="30"/>
+                                <color key="backgroundColor" red="0.16078431372549021" green="0.19607843137254902" blue="0.2196078431372549" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="AxJ-d2-pC1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Ht-Rd-nkw">
+                                <rect key="frame" x="0.0" y="50" width="400" height="250"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="B3FDailyUpdateItemCell" id="fKq-W8-Kbm" customClass="B3FDailyUpdateItemCell">
+                                        <rect key="frame" x="0.0" y="28" width="400" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fKq-W8-Kbm" id="h3V-rp-PZF">
+                                            <rect key="frame" x="0.0" y="0.0" width="400" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Ht-Rd-nkw" firstAttribute="top" secondItem="pr6-2R-0Xi" secondAttribute="bottom" id="Bxt-bY-wIg"/>
+                            <constraint firstItem="pr6-2R-0Xi" firstAttribute="top" secondItem="AYA-kS-H8J" secondAttribute="bottom" id="EfQ-N4-CxH"/>
+                            <constraint firstItem="Jgq-Ad-klP" firstAttribute="top" secondItem="9Ht-Rd-nkw" secondAttribute="bottom" id="byb-P8-McR"/>
+                            <constraint firstItem="pr6-2R-0Xi" firstAttribute="leading" secondItem="CuB-d3-kfb" secondAttribute="leading" id="iVq-jD-ihD"/>
+                            <constraint firstItem="9Ht-Rd-nkw" firstAttribute="leading" secondItem="CuB-d3-kfb" secondAttribute="leading" id="kFo-r6-c6e"/>
+                            <constraint firstAttribute="trailing" secondItem="pr6-2R-0Xi" secondAttribute="trailing" id="qQN-PG-wOX"/>
+                            <constraint firstAttribute="trailing" secondItem="9Ht-Rd-nkw" secondAttribute="trailing" id="xLe-zd-cuk"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="400" height="300"/>
+                    <connections>
+                        <outlet property="listTV" destination="9Ht-Rd-nkw" id="MpV-yH-9UQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3bw-k4-cWk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="249" y="1556"/>
+        </scene>
     </scenes>
 </document>
