--- a/DailyUpdate/Base.lproj/Main.storyboard
+++ b/DailyUpdate/Base.lproj/Main.storyboard
@@ -134,8 +134,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="9Ht-Rd-nkw" firstAttribute="top" secondItem="pr6-2R-0Xi" secondAttribute="bottom" id="Bxt-bY-wIg"/>
-                            <constraint firstItem="pr6-2R-0Xi" firstAttribute="top" secondItem="AYA-kS-H8J" secondAttribute="bottom" id="EfQ-N4-CxH"/>
-                            <constraint firstItem="Jgq-Ad-klP" firstAttribute="top" secondItem="9Ht-Rd-nkw" secondAttribute="bottom" id="byb-P8-McR"/>
+                            <constraint firstItem="pr6-2R-0Xi" firstAttribute="top" secondItem="AYA-kS-H8J" secondAttribute="bottom" id="PKg-yt-5DG"/>
+                            <constraint firstItem="Jgq-Ad-klP" firstAttribute="top" secondItem="9Ht-Rd-nkw" secondAttribute="bottom" id="fx5-Ps-Q7g"/>
                             <constraint firstItem="pr6-2R-0Xi" firstAttribute="leading" secondItem="CuB-d3-kfb" secondAttribute="leading" id="iVq-jD-ihD"/>
                             <constraint firstItem="9Ht-Rd-nkw" firstAttribute="leading" secondItem="CuB-d3-kfb" secondAttribute="leading" id="kFo-r6-c6e"/>
                             <constraint firstAttribute="trailing" secondItem="pr6-2R-0Xi" secondAttribute="trailing" id="qQN-PG-wOX"/>
@@ -150,7 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3bw-k4-cWk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="249" y="1556"/>
+            <point key="canvasLocation" x="205" y="1546"/>
         </scene>
     </scenes>
 </document>
