--- a/DailyUpdate/Base.lproj/Main.storyboard
+++ b/DailyUpdate/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--CalendarVC-->
+        <!--Calendar MonthVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="B3FCalendarVC" id="BYZ-38-t0r" customClass="B3FCalendarVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="B3FCalendarMonthVC" id="BYZ-38-t0r" customClass="B3FCalendarMonthVC" customModule="DailyUpdate" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
